tooling/nargo_cli/tests/snapshots/execution_success/regression_method_cannot_be_found/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
struct Item {
    id: Field,
}

impl Item {
    fn log(self) {
        let id: Field = self.id;
        println(id);
    }
}

fn create<V>(something: V) -> V {
    something
}

fn main() {
    let a: Item = Item { id: 1 };
    let b: Item = create(a);
    let _id: Field = b.id;
    b.log();
}
